# ai-stock-analysis

./: .gitignore  CLAUDE.md  LICENSE  README.md  architecture.md  pyproject.toml  tickers.txt
.github/workflows/: fetch.yml
data/1023/: fundamentals.json  price_history.csv  technicals.json
data/1066/: fundamentals.json  price_history.csv  technicals.json
data/1082/: fundamentals.json  price_history.csv  technicals.json
data/1155/: analyst_reports.json  briefing.json  debate_result.json  fundamentals.json  price_history.csv  technicals.json
data/1295/: fundamentals.json  price_history.csv  technicals.json
data/1961/: fundamentals.json  price_history.csv  technicals.json
data/2445/: fundamentals.json  price_history.csv  technicals.json
data/3816/: fundamentals.json  price_history.csv  technicals.json
data/4065/: fundamentals.json  price_history.csv  technicals.json
data/4197/: fundamentals.json  price_history.csv  technicals.json
data/4677/: fundamentals.json  price_history.csv  technicals.json
data/4707/: fundamentals.json  price_history.csv  technicals.json
data/4863/: fundamentals.json  price_history.csv  technicals.json
data/5183/: fundamentals.json  price_history.csv  technicals.json
data/5211/: fundamentals.json  price_history.csv  technicals.json
data/5225/: fundamentals.json  price_history.csv  technicals.json
data/5285/: fundamentals.json  price_history.csv  technicals.json
data/5296/: fundamentals.json  price_history.csv  technicals.json
web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
(+1706 files in other folders)
