[project]
name = "ai-stock-analysis"
version = "0.1.0"
description = "Multi-agent AI stock analysis system"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.59",
    "yfinance>=0.2.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pandas>=2.0",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
stock-analysis = "stock_analysis.main:cli"
stock-fetch = "stock_analysis.fetch:cli"
stock-analysis-backtest = "stock_analysis.backtest.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_analysis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
